fix z-index issue

--- a/src/components/meetings/CreateMeeting.module.scss
+++ b/src/components/meetings/CreateMeeting.module.scss
@@ -47,7 +47,7 @@
     left: 0;
     width: 100%;
     background-color: $c-white;
-    z-index: 1000;
+    z-index: 100;
   }
 }
 
